--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "my-portfolio",
   "version": "1.0.0",
   "description": "My professional portfolio",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "nodemon start"
   },
   "repository": {
     "type": "git",
@@ -19,5 +22,19 @@
   "bugs": {
     "url": "https://github.com/seanpweber/my-portfolio/issues"
   },
-  "homepage": "https://github.com/seanpweber/my-portfolio#readme"
+  "homepage": "https://github.com/seanpweber/my-portfolio#readme",
+  "dependencies": {
+    "bulma": "^0.9.3",
+    "css-loader": "^6.0.0",
+    "express": "^4.17.1",
+    "heroku": "^7.56.1",
+    "if-env": "^1.0.4",
+    "jquery": "^3.6.0",
+    "nodemon": "^2.0.12",
+    "react": "^17.0.2",
+    "webpack": "^5.45.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.7.2"
+  }
 }
