--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "express": "^4.17.1",
     "heroku": "^7.56.1",
     "if-env": "^1.0.4",
-    "jquery": "^3.6.0",
     "nodemon": "^2.0.12",
     "react": "^17.0.2",
+    "style-loader": "^3.1.0",
     "webpack": "^5.45.0"
   },
   "devDependencies": {
