--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
-    "start:dev": "nodemon start"
+    "start:dev": "nodemon start",
+    "heroku-postbuild": "webpack -p"
   },
   "repository": {
     "type": "git",
