--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "webpack": "^5.45.0"
   },
   "devDependencies": {
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1",
     "webpack-cli": "^4.7.2"
   }
 }
