--- a/package.json
+++ b/package.json
@@ -32,7 +32,14 @@
     "heroku": "^7.56.1",
     "if-env": "^1.0.4",
     "nodemon": "^2.0.12",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "style-loader": "^3.1.0",
+    "web-vitals": "^2.1.0",
     "webpack": "^5.45.0"
   },
   "devDependencies": {
